fix: prevent keyword text from wrapping

--- a/src/components/Keyword/index.module.scss
+++ b/src/components/Keyword/index.module.scss
@@ -9,4 +9,6 @@
   color: var(--primary-700);
   background-color: var(--primary-100);
   border-radius: 3px;
+
+  white-space: nowrap;
 }
